[package]
name = "mincost"
version = "0.1.0"
authors = ["Eric <zhenyuxu163@163.com>"]
edition = "2018"

[dependencies]
rand = "0.8"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
num-traits = "0.2"

[features]
ga = []
sa = []

[workspace]
members = [
	"examples/ga_examples/bounded_decimal_encoding",
	"examples/ga_examples/binary_encoding",
]