[package]
name = "mincost"
version = "0.1.1"
authors = ["Eric <xuzhenyutc@icloud.com>"]
edition = "2018"
description = "A collection of modern heuristic optimization toolkit"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/erihsu/mincost"
keywords = ["heuristic","genetic-algorithm","simulated-annealing","particle-swarm"]

[dependencies]
fastrand = "1.4"

[features]
default = ["ga","sa","pso"]
ga = []
sa = []
pso = []

[workspace]
members = [
	"examples/ga_examples/bounded_decimal_encoding",
	"examples/ga_examples/binary_encoding",
]