[package]
name = "tsp-ga"
version = "0.1.0"
authors = ["Eric Hsu <xuzhenyutc@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mincost = {path = "../../../../mincost",features = ["ga","shuffle"]}
rand = "0.8"
